--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -2,10 +2,14 @@
 
 <% @posts.each do |post| %>
   <h2><%= post.title %></h2>
+  <% if user_signed_in? %>
+    <p><small>By: <%= post.user.name %></small></p>
+  <% end %>
   <p><%= post.body %></p>
 <% end %>
 
 <% if user_signed_in? %>
+  <%= link_to 'New Post', new_post_path %>
   <%= button_to 'Sign Out', destroy_user_session_path, method: :delete %>
 <% else %>
   <%= button_to 'Sign In', new_user_session_path %>
