--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -8,3 +8,92 @@
  *
  * Consider organizing styles into separate files for maintainability.
  */
+
+.login-form {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    background-color: #f2f2f2;
+	max-width: 600px;
+    margin: 0 auto;
+    padding: 20px;
+    box-shadow: 0 4px 6px rgba(50, 50, 93, 0.11), 0 1px 3px rgba(0, 0, 0, 0.08);
+    border-radius: 4px;
+}
+
+input:where([type="text"], [type="email"], [type="password"]) {
+    width: 100%;
+    padding: 10px;
+    margin-bottom: 10px;
+    border: 1px solid #ccc;
+    border-radius: 6px;
+	box-sizing: border-box;
+}
+
+.right {
+    float: right;
+}
+
+.w-full {
+    width: 100%;
+}
+
+.post {
+	box-shadow: 0 4px 6px rgba(50, 50, 93, 0.11), 0 1px 3px rgba(0, 0, 0, 0.08);
+    border-radius: 4px;
+	max-width: 600px;
+	padding: 10px;
+	margin-bottom: 10px;
+	background-color: #e9edc9;
+}
+.post h2 {
+    margin: 0;
+}
+.post p {
+    margin: 0;
+}
+
+button {
+    border: 1px solid black;
+	border-radius: 4px;
+    color: black;
+    padding: 5px 7px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    margin: 4px 2px;
+    cursor: pointer;
+}
+
+button.danger {
+    background-color: #f44336;
+    color: white;
+}
+button.success {
+    background-color: #4CAF50;
+    color: white;
+}
+
+.btn {
+    border: 1px solid black;
+    border-radius: 4px;
+    color: black;
+    padding: 5px 7px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    margin: 4px 2px;
+    cursor: pointer;
+}
+.btn.success {
+    background-color: #4CAF50;
+    color: white;
+}
+
+.btn.danger {
+    background-color: #f44336;
+    color: white;
+}
