--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,16 +1,18 @@
 <h1>Posts</h1>
 
 <% @posts.each do |post| %>
+  <div class="post">
   <h2><%= post.title %></h2>
   <% if user_signed_in? %>
     <p><small>By: <%= post.user.name %></small></p>
   <% end %>
   <p><%= post.body %></p>
+  </div>
 <% end %>
 
 <% if user_signed_in? %>
-  <%= link_to 'New Post', new_post_path %>
-  <%= button_to 'Sign Out', destroy_user_session_path, method: :delete %>
+  <%= link_to 'New Post', new_post_path, class: 'btn success' %>
+  <%= button_to 'Sign Out', destroy_user_session_path, method: :delete, class: 'danger' %>
 <% else %>
-  <%= button_to 'Sign In', new_user_session_path %>
+  <%= button_to 'Sign In', new_user_session_path, class: 'success' %>
 <% end %>
