--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -1,14 +1,16 @@
 <h1>New Post</h1>
 
 <%= form_for @post do |f| %>
-  <div>
-    <%= f.label :title %><br>
-    <%= f.text_field :title %>
+  <div class="post">
+    <div>
+      <%= f.label :title %><br>
+      <%= f.text_field :title %>
+    </div>
+    <div>
+      <%= f.label :body %><br>
+      <%= f.text_area :body %>
+    </div>
+    <%= f.submit('Submit', class: 'btn success') %>
   </div>
-  <div>
-    <%= f.label :body %><br>
-    <%= f.text_area :body %>
-  </div>
-  <%= f.submit %>
 <% end %>
 <%= link_to 'Back', posts_path %>
